
== tekUI Changelog ==

 * Compiler tool: Now works with Lua 5.1/5.2/5.3 using the method shown in
 lua-amalg by Philipp Janda, LUAARCH switch is no longer needed, module
 sampling is now done in a LuaExec task, no module statistics files needed

=== 1.12: ===

 * Changes to the class system, module loader and documentation system,
 no longer requires Lua 5.2, 5.3 to be compiled with LUA_COMPAT_MODULE
 * Windows HAL: Atomics enabled
 * Windows display: Added clipboard support, improved event handling, Win64
 support, synchronous waiting, added Unicode text rendering, added better
 support for keyboard qualifiers, windows opened at fixed positions had
 wrong size, corrected, added support for bold and italic font styles
 * Visual, EditWindow, Input: added setSelection, TextEdit: uses application
 clipboard, removed class clipboard, quirky attribute retrieval corrected
 * Application: added obtainClipboard, releaseClipboard
 * Changed notes about LuaJIT and some additions to documentation
 * LuaExec: Changes merged in, in join() abort signals could be forwarded to
 already dead task, corrected by freeing task after return from exec, in
 waitmsg() fixed recalculation of waittime, returned signals should be
 correct now, childnotify example added to demonstrate GUI signal handlers
 * Exec: added semi-internal function TFreeTask(), user tasks are now
 freed in destructor context after their return from exec, minor cleanup
 in memory functions

=== 1.11: ===

 * HAL: fix for broken timer device under Windows, MMTimer timerequest abort
 on signal arrival did not work for ages, corrected, giving e.g. TWaitTime()
 in Windows display driver much better response times and smoother updates.
 * Luaexec: added functions getmsg, getname, getsignals, run, sendport,
 sendmsg, signal, sleep, wait, waitmsg, waittime, child methods abort, join,
 sendport, sendmsg, signal, terminate, including error propagation through
 running tasks, added childtask example