@@ -34,6 +34,7 @@ CC = $(CROSS_COMPILE)gcc -fpic # -DTSYS_POSIX
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 # CC = $(CROSS_COMPILE)gcc -DWIN32 -DWINVER=0x0400 -D_WIN32_WINNT=0x0400
+# CC += -DHAL_USE_ATOMICS # comment this out in case of problems
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Cross-build prefix:
@@ -44,6 +45,7 @@ CC = $(CROSS_COMPILE)gcc -fpic # -DTSYS_POSIX
 # CROSS_COMPILE = i586-mingw32-
 # MinGW-W64 targeting 32-Bit Windows:
 # CROSS_COMPILE = i686-w64-mingw32-
+# EXECUTE = wine
 
 #------------------------------------------------------------------------------
 # Platform libraries:
