@@ -15,7 +15,12 @@
 				<li>
 					Compiler tool: Now works with Lua 5.1/5.2/5.3 using the method shown in
 					lua-amalg by Philipp Janda, LUAARCH switch is no longer needed, module
-					sampling is now done in a LuaExec task, no module statistics files needed
+					sampling is now done in a LuaExec task, no module statistics files needed,
+					now works under Windows, too
+				</li>
+				<li>
+					Building a standalone tekUI executable now works under Windows and using
+					cross-compilation
 				</li>
 			</ul>
 		</blockquote>
