@@ -44,8 +44,12 @@ static const luaL_Reg lualibs2[] = {
   { "tek.lib.exec", luaopen_tek_lib_exec },
   { "tek.lib.region", luaopen_tek_lib_region },
   { "tek.lib.string", luaopen_tek_lib_string },
+#if defined(TSYS_POSIX)
   { "tek.lib.display.x11", luaopen_tek_lib_display_x11 },
 /*{ "tek.lib.display.rawfb", luaopen_tek_lib_display_rawfb },*/
+#elif defined(TSYS_WINNT)
+  { "tek.lib.display.windows", luaopen_tek_lib_display_windows },
+#endif
   { "tek.lib.visual", luaopen_tek_lib_visual },
   { "tek.lib.support", luaopen_tek_lib_support },
   { "tek.ui.layout.default", luaopen_tek_ui_layout_default },
