@@ -1,10 +1,24 @@
 
+#define loslib_c
+#define luaall_c
+#define lobject_c
+#define lvm_c
+#define lua_c
+
+/* LoadString() conflicts with Windows */
+#include "lundump.c"
+
+
 #define EXPORT static TMODAPI
 #define LOCAL static
 #define TLIBAPI static
 
 #include "../../src/teklib/init.c"
+#if defined(TSYS_POSIX)
 #include "../../src/teklib/posix/host.c"
+#elif defined(TSYS_WINNT)
+#include "../../src/teklib/winnt/host.c"
+#endif
 #include "../../src/teklib/debug.c"
 #include "../../src/teklib/teklib.c"
 #include "../../src/teklib/string.c"
@@ -12,16 +26,21 @@
 #include "../../src/visual/visual_all.c"
 #include "../../src/exec/exec_all.c"
 #include "../../src/hal/hal_mod.c"
+#if defined(TSYS_POSIX)
 #include "../../src/hal/posix/hal.c"
+#elif defined(TSYS_WINNT)
+#include "../../src/hal/winnt/hal.c"
+#endif
 
+#if defined(TSYS_POSIX)
 #include "../../src/display_x11/display_x11_all.c"
 /*#include "../../src/display_rawfb/display_rfb_all.c"*/
+#elif defined(TSYS_WINNT)
+#include "../../src/display_windows/display_win_api.c"
+#include "../../src/display_windows/display_win_font.c"
+#include "../../src/display_windows/display_win_mod.c"
+#endif
 
-#define loslib_c
-#define luaall_c
-#define lobject_c
-#define lvm_c
-#define lua_c
 
 #include "lapi.c"
 #include "lauxlib.c"
@@ -60,7 +79,6 @@
 #include "ltable.c"
 #include "ltablib.c"
 #include "ltm.c"
-#include "lundump.c"
 #include "lvm.c"
 #include "lzio.c"
 
@@ -79,8 +97,12 @@
 #include "../../src/misc/imgcache.c"
 #include "../../src/misc/imgload.c"
 
+#if defined(TSYS_POSIX)
 #include "display/x11_lua.c"
 /*#include "display/rawfb_lua.c"*/
+#elif defined(TSYS_WINNT)
+#include "display/windows_lua.c"
+#endif
 
 #include "../ui/layout/default.c"
 #include "../ui/class/area.c"
